fix nav overflow-y scroll

--- a/components/layout/nav/Nav.module.css
+++ b/components/layout/nav/Nav.module.css
@@ -18,6 +18,7 @@
   align-items: center;
   z-index: 1;
   background-color: var(--main-background-color);
+  overflow-y: scroll;
 }
 
 @media only screen and (max-width: 800px) {
